# igsn_resolver

./: .gitignore  README.md  dev_requirements.txt  identifier-resolver.js  index.html  logging.conf  main.py  pyproject.toml
.github/workflows/: deploy-deta.yml  deploy-vercel.yml  pages.yml
UML/: container.puml  context.puml
app/: main.py  requirements.txt  vercel.json
app/igsnresolve/: __init__.py
app/static/: index.html
app/static/src/: IdentifierResolver.js
docs/: .nojekyll  index.html
identifier-resolver/: LICENSE  README.md  index.js  package-lock.json  package.json
identifier-resolver/demo/: index.html
identifier-resolver/src/: IdentifierResolver.js
igsnresolve/: __init__.py
scripts/: gather_prefixes.py  requirements.txt
src/: IdentifierResolver.js
tests/: test_igsnresolve.py
